--- a/src/controllers/Header/styles.css
+++ b/src/controllers/Header/styles.css
@@ -3,13 +3,13 @@
   display: flex;
   border: 1px solid rgba(125, 125, 125, 0.25);
   width: 100%;
-  justify-content: center;
+  justify-content: right;
   background: rgb(50, 50, 50);
 }
 .header_icon {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: right;
   width: 100%;
 }
 .header_icon a,
@@ -21,21 +21,21 @@
 }
 .header__subcontainer a {
   display: flex;
-  justify-content: center;
+  justify-content: right;
   align-items: center;
 }
 .header__subcontainer {
   width: 100%;
-  max-width: 1400px;
+  max-width: 300px;
   display: flex;
   margin: 0 20px;
-  justify-content: space-between;
+  justify-content: right;
 }
 .header__cart {
   display: flex;
   align-items: center;
   font-size: 25px;
-  justify-content: flex-end;
+  justify-content: right;
   width: 100%;
 }
 .product__count {
@@ -55,6 +55,6 @@
     justify-content: center;
   }
   .header_icon {
-    border-bottom: 1px solid rgba(128, 128, 128, 0.219);
+    border-bottom: 1px solid rgba(125, 125, 125);
   }
 }
