--- a/src/controllers/Login/login.css
+++ b/src/controllers/Login/login.css
@@ -23,6 +23,7 @@ form {
     /* border: 1px solid black; */
     background-color: aliceblue;
     box-shadow: 10px 10px 5px lightblue;
+    border-radius: 20px;
 }
 
 label {
