--- a/src/controllers/WholeItem/styles.css
+++ b/src/controllers/WholeItem/styles.css
@@ -11,8 +11,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 25px;
-  border: 1px solid rgba(128, 128, 128, 0.274);
+  padding: 25px 25px;
+  border: 1px solid rgba(100, 100, 100);
+  border-radius: 20px;
+  background: rgb(255, 255, 255);
 }
 .user__cart .left__Cart {
   width: 50%;
@@ -27,7 +29,8 @@
 .item_left__img {
   height: 100px;
   width: 100px;
-  background-color: greenyellow;
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
 }
 .item_left__img img {
   height: 100%;
@@ -44,16 +47,16 @@
   border: none;
   margin-top: 5px;
   cursor: pointer;
-  background-color: #808080d4;
+  background-color: rgba(0, 0, 0);
   padding: 0px 15px;
   color: white;
-  border-radius: 3px;
-  font-size: 17px;
+  border-radius: 5px;
+  font-size: 16px;
 }
 
 .item__right {
   width: 250px;
-  padding: 10px 0;
+  padding: 10px 0px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -71,12 +74,14 @@
 .right__Cart {
   height: 200px;
   min-width: 200px;
-  background-color: antiquewhite;
+  background-color: rgb(250, 250, 225);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
   padding: 10px;
+  border-radius: 20px;
+  box-shadow: 5px 5px 2px lightblue;
 }
 .right__Cart > div {
   display: flex;
@@ -89,7 +94,7 @@
   width: 100%;
 }
 .cart__price {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 700;
 }
 @media only screen and (max-width: 900px) {
@@ -100,7 +105,7 @@
     order: 2;
   }
 }
-@media only screen and (max-width: 793px) {
+@media only screen and (max-width: 800px) {
   .user__cart,
   .item__details {
     flex-direction: column;
