--- a/src/controllers/cards/card.css
+++ b/src/controllers/cards/card.css
@@ -1,7 +1,10 @@
 .product__card {
   max-width: 200px;
-  border: 1px solid #80808033;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 10px;
   margin: 5px;
+  background: rgb(255, 255, 255);
+  padding: 20px;
 }
 .card {
   display: flex;
@@ -10,7 +13,7 @@
   transition: all 5s ease-in-out;
 }
 .card img:hover {
-  transform: scale(1.1);
+  transform: scale(1.2);
 }
 .card img {
   width: 80%;
